--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -859,51 +859,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'low_risk': 51352, 'high_risk': 51352})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Resample the training data with SMOTE\n"
+    "# Resample the training data with SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "X_resampled, y_resampled = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6251596424010217"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   54,    33],\n",
+       "       [ 6340, 10778]], dtype=int64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.62      0.63      0.02      0.63      0.39        87\n",
+      "   low_risk       1.00      0.63      0.62      0.77      0.63      0.39     17118\n",
+      "\n",
+      "avg / total       0.99      0.63      0.62      0.77      0.63      0.39     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
