--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -949,7 +949,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -989,53 +991,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'high_risk': 260, 'low_risk': 260})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
-    "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "# Warning: This is a large dataset, and this step may take some time to complete (2 min)\n",
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "cc = ClusterCentroids(random_state=1)\n",
+    "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=78)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=78)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6251596424010217"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  53,   34],\n",
+       "       [9424, 7694]], dtype=int64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_pred = model.predict(X_test)\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.61      0.45      0.01      0.52      0.28        87\n",
+      "   low_risk       1.00      0.45      0.61      0.62      0.52      0.27     17118\n",
+      "\n",
+      "avg / total       0.99      0.45      0.61      0.62      0.52      0.27     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1057,53 +1127,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'high_risk': 68460, 'low_risk': 62011})"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "# Warning: This is a large dataset, and this step may take some time to complete (2 min)\n",
+    "from imblearn.combine import SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state=0)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5293318990697431"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  61,   26],\n",
+       "       [7157, 9961]], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_pred = model.predict(X_test)\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41        87\n",
+      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17118\n",
+      "\n",
+      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
